# DataStructuresEx02

./: AppUI.cpp  AppUI.h  BST.cpp  BST.h  BSTree.cpp  BSTree.h  BSTreeException.cpp  BSTreeException.h  BSTreeNode.cpp  BSTreeNode.h  CMakeLists.txt  Func.h  HeapException.cpp  HeapException.h  MinHeap.cpp  MinHeap.h  Pair.cpp  Pair.h  Person.h  RandSelection.cpp  RandSelection.h  main.cpp  selectHeap.cpp  selectHeap.h
