cmake_minimum_required(VERSION 3.21)
project(DataStructuresEx02)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructuresEx02 main.cpp AppUI.cpp AppUI.h Person.h Func.h RandSelection.cpp RandSelection.h Pair.cpp Pair.h HeapException.cpp HeapException.h MinHeap.cpp MinHeap.h selectHeap.cpp selectHeap.h)
